--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\Users\PC\carpetaIcon\ICONO SHARINGAN.ico,0
+IconResource=C:\Users\PC\carpetaIcon\mandelbrot.ico,0
 [ViewState]
 Mode=
 Vid=
